--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     preload: function () {
       this.load.image('title', 'assets/title.png');
       this.load.image('fullscreen1', 'assets/button-fullscreen-1.png');
-      //this.load.image('fullscreen2', 'assets/button-fullscreen-2.png');
+      this.load.image('fullscreen2', 'assets/button-fullscreen-2.png');
       this.load.image('start1', 'assets/button-start-1.png');
-      //this.load.image('start2', 'assets/button-start-2.png');
+      this.load.image('start2', 'assets/button-start-2.png');
       this.load.audio('click', 'assets/se-type.wav');
     },
 
@@ -117,7 +117,14 @@
       var fullscreenButton = this.add.image(400, 600, "fullscreen1");
       fullscreenButton.setInteractive();
       fullscreenButton.on('pointerdown', function () {
+        fullscreenButton.setTexture("fullscreen2")
         click.play();
+      }, this);
+      fullscreenButton.on('pointerout', function () {
+        fullscreenButton.setTexture("fullscreen1")
+      }, {}, this);
+      fullscreenButton.on('pointerup', function () {
+        fullscreenButton.setTexture("fullscreen1")
         if (this.scale.isFullscreen) {
           this.scale.stopFullscreen();
         }    
@@ -125,12 +132,19 @@
           this.scale.startFullscreen();
         }
       }, this);  
-      
+     
       var startButton = this.add.image(400, 700, 'start1');
       startButton.setInteractive();
       startButton.on('pointerdown', function () {
+        startButton.setTexture("start2")
         click.play();
-        this.time.delayedCall(500, function () {
+      }, {}, this);
+      startButton.on('pointerout', function () {
+        startButton.setTexture("start1")
+      }, {}, this);
+      startButton.on('pointerup', function () {
+        startButton.setTexture("start1")
+        this.time.delayedCall(350, function () {
           this.scene.start('RaidScene');
         }, {}, this);
       }, this);
