--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   circleAoeRadius = 500;
   const circleAoe = {
         name: 'initialise this from the list somehow',
-        chargeTime: 10000,
+        chargeTime: 5000,
         damage: 100,
         damageAnimation: null,
         damageRadius: 500,
@@ -109,11 +109,11 @@
       this.load.image('start1', 'assets/button-start-1.png');
       this.load.image('start2', 'assets/button-start-2.png');
       this.load.audio('click', 'assets/se-type.wav');
-      //this.load.text("data", "assets/_Barks-v1.txt"); // Testing text loading from other files.
+      //this.load.text("data", "assets/_Barks-v1.txt");
     },
 
     create: function () {
-      //console.log(this.cache.text.get("data")) // Testing text loading from other files.
+      //console.log(this.cache.text.get("data"))
       this.add.image(960, 540, "title");
       click = this.sound.add("click");
 
@@ -340,7 +340,6 @@
         pawn.pawnMoveInterval = Phaser.Math.RND.between(100, 400)
         pawn.nextPawnMoveTime = globalClock + pawn.pawnMoveInterval;
         pawn.respondingToMechanic = false;
-        pawn.knowsMechanic = Math.random() < 0.25 ? true : false;
       }, this);
       // pawn creation end
 
@@ -417,32 +416,6 @@
         }
       }
 
-      const flockPawn = (pawn) => {
-        var targetX = 0;
-        var targetY = 0;
-        var flockMaximum = 250;
-        const flockMinimum = 10;
-        var peerCount = 0;
-        const surveyPeers = (maxRadius) => {
-          pawns.getChildren().forEach(other => {
-            const dist = Phaser.Math.Distance.Between(pawn.x, pawn.y, other.x, other.y);
-            if (dist < flockMaximum && dist > flockMinimum) {
-              peerCount++;
-              targetX += other.x;
-              targetY += other.y;
-            }
-            if (dist)
-          });
-        }
-        while (peerCount == 0) {
-          surveyPeers(flockMaximum);
-          flockMaximum = flockMaximum * 2;
-        }
-        const target = new Phaser.Math.Vector2(targetX/peerCount, targetY/peerCount);
-        pawn.targetLocation = target;
-        this.physics.moveToObject(pawn, pawn.targetLocation, 240);
-      }
-
       const movePawn = (pawn) => {
         if (true) { // direction checker later
           // const components = pawn.getAll('_downAnimKey');
@@ -451,17 +424,14 @@
         if (gameTime > pawn.nextPawnMoveTime) {
           pawn.nextPawnMoveTime = globalClock + pawn.pawnMoveInterval;
           if (mechanicActive) {
-            if (pawn.knowsMechanic) { // knows mechanic check
+            if (true) { // knows mechanic check
               if (!pawn.respondingToMechanic) {
                 pawn.respondingToMechanic = true;
                 pawn.targetLocation = currentMechanic.getSafeLocation(pawn, boss);
                 this.physics.moveToObject(pawn, pawn.targetLocation, 240);
               }
-            } else {
-              if (true) {
-                flockPawn(pawn);
-              }
             }
+            // flock, or freeze in headlights since that isn't done yet!
           } else {
             if (!bossDamageCircle.contains(pawn.x, pawn.y)) {
               pawn.targetLocation = Phaser.Geom.Circle.Random(bossDamageCircle);
