--- a/index.html
+++ b/index.html
@@ -110,10 +110,12 @@
       this.load.image('start2', 'assets/button-start-2.png');
       this.load.audio('click', 'assets/se-type.wav');
       //this.load.text("data", "assets/_Barks-v1.txt");
+      //Testing text loading from another file.
     },
 
     create: function () {
-      //console.log(this.cache.text.get("data"))
+      //console.log(this.cache.text.get("data")) 
+      //Testing text loading from another file.
       this.add.image(960, 540, "title");
       click = this.sound.add("click");
 
@@ -197,6 +199,39 @@
 
       player = this.physics.add.image(960, 720, 'player');
       playerTarget = this.physics.add.image(960, 720, 'playerTarget');
+
+      //MALCODE STARTS
+      //Testing Layout
+      const pawnCardStyle = {font: "Courier", fontSize: "32px", fill: '#66ffff' }
+
+      P01 = this.add.text(55, -55, "Player", pawnCardStyle);
+      P02 = this.add.text(55, -15, "Player", pawnCardStyle);
+      P03 = this.add.text(55, 25, "Player", pawnCardStyle);
+      P04 = this.add.text(55, 65, "Player", pawnCardStyle);
+      P05 = this.add.text(55, 105, "Player", pawnCardStyle);
+      P06 = this.add.text(55, 145, "Player", pawnCardStyle);
+      P07 = this.add.text(55, 185, "Player", pawnCardStyle);
+      P08 = this.add.text(55, 225, "Player", pawnCardStyle);
+      P09 = this.add.text(55, 265, "Player", pawnCardStyle);
+      P10 = this.add.text(55, 305, "Player", pawnCardStyle);
+      P11 = this.add.text(55, 345, "Player", pawnCardStyle);
+      P12 = this.add.text(55, 385, "Player", pawnCardStyle);
+
+      P13 = this.add.text(325, -55, "Player", pawnCardStyle);
+      P14 = this.add.text(325, -15, "Player", pawnCardStyle);
+      P15 = this.add.text(325, 25, "Player", pawnCardStyle);
+      P16 = this.add.text(325, 65, "Player", pawnCardStyle);
+      P17 = this.add.text(325, 105, "Player", pawnCardStyle);
+      P18 = this.add.text(325, 145, "Player", pawnCardStyle);
+      P19 = this.add.text(325, 185, "Player", pawnCardStyle);
+      P20 = this.add.text(325, 225, "Player", pawnCardStyle);
+      P21 = this.add.text(325, 265, "Player", pawnCardStyle);
+      P22 = this.add.text(325, 305, "Player", pawnCardStyle);
+      P23 = this.add.text(325, 345, "Player", pawnCardStyle);
+      P24 = this.add.text(325, 385, "Player", pawnCardStyle);
+
+      //MALCODE ENDS
+
 
       // pawn creation start
       const defineAnims = () => {
@@ -352,9 +387,9 @@
         }, this
       );
 
-      timeText = this.add.text(10, 10, 'Time: ', { fill: '#00ff00' });
-      bossHealthText = this.add.text(10, 30, 'Boss Hp: ', { fill: '#00ff00' });
-      mechanicText = this.add.text(10, 50, 'No Mechanic', { fill: '#00ff00' });
+      timeText = this.add.text(15, 510, 'Time: ', { fill: '#00ff00' });
+      bossHealthText = this.add.text(15, 530, 'Boss Hp: ', { fill: '#00ff00' });
+      mechanicText = this.add.text(15, 550, 'No Mechanic', { fill: '#00ff00' });
 
       nextBossMoveTime = globalClock + bossMoveInterval;
       bossHealth = bossMaxHp;
