--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
   <script>
   // constants for gameplay to refer to. some of these may stop being constants for e.g. boss variance
-  //Strictly a testing comment line.
 
   const leftPlayBound = 480;
   const rightPlayBound = 1440;
@@ -211,33 +210,33 @@
 
       //MALCODE STARTS
       //Testing Layout
-      const pawnCardStyle = {font: "Courier", fontSize: "32px", fill: '#66ffff' }
+      const pawnCardStyle = {fontFamily: "Trebuchet MS", fontSize: "16px", fill: '#66ffff' }
 
-      P01 = this.add.text(55, -55, "Player", pawnCardStyle);
-      P02 = this.add.text(55, -15, "Player", pawnCardStyle);
-      P03 = this.add.text(55, 25, "Player", pawnCardStyle);
-      P04 = this.add.text(55, 65, "Player", pawnCardStyle);
-      P05 = this.add.text(55, 105, "Player", pawnCardStyle);
-      P06 = this.add.text(55, 145, "Player", pawnCardStyle);
-      P07 = this.add.text(55, 185, "Player", pawnCardStyle);
-      P08 = this.add.text(55, 225, "Player", pawnCardStyle);
-      P09 = this.add.text(55, 265, "Player", pawnCardStyle);
-      P10 = this.add.text(55, 305, "Player", pawnCardStyle);
-      P11 = this.add.text(55, 345, "Player", pawnCardStyle);
-      P12 = this.add.text(55, 385, "Player", pawnCardStyle);
+      P01 = this.add.text(55, -85, "Player", pawnCardStyle);
+      P02 = this.add.text(55, -45, "Player", pawnCardStyle);
+      P03 = this.add.text(55, -5, "Player", pawnCardStyle);
+      P04 = this.add.text(55, 35, "Player", pawnCardStyle);
+      P05 = this.add.text(55, 75, "Player", pawnCardStyle);
+      P06 = this.add.text(55, 115, "Player", pawnCardStyle);
+      P07 = this.add.text(55, 155, "Player", pawnCardStyle);
+      P08 = this.add.text(55, 195, "Player", pawnCardStyle);
+      P09 = this.add.text(55, 235, "Player", pawnCardStyle);
+      P10 = this.add.text(55, 275, "Player", pawnCardStyle);
+      P11 = this.add.text(55, 315, "Player", pawnCardStyle);
+      P12 = this.add.text(55, 355, "Player", pawnCardStyle);
 
-      P13 = this.add.text(325, -55, "Player", pawnCardStyle);
-      P14 = this.add.text(325, -15, "Player", pawnCardStyle);
-      P15 = this.add.text(325, 25, "Player", pawnCardStyle);
-      P16 = this.add.text(325, 65, "Player", pawnCardStyle);
-      P17 = this.add.text(325, 105, "Player", pawnCardStyle);
-      P18 = this.add.text(325, 145, "Player", pawnCardStyle);
-      P19 = this.add.text(325, 185, "Player", pawnCardStyle);
-      P20 = this.add.text(325, 225, "Player", pawnCardStyle);
-      P21 = this.add.text(325, 265, "Player", pawnCardStyle);
-      P22 = this.add.text(325, 305, "Player", pawnCardStyle);
-      P23 = this.add.text(325, 345, "Player", pawnCardStyle);
-      P24 = this.add.text(325, 385, "Player", pawnCardStyle);
+      P13 = this.add.text(325, -85, "Player", pawnCardStyle);
+      P14 = this.add.text(325, -45, "Player", pawnCardStyle);
+      P15 = this.add.text(325, -5, "Player", pawnCardStyle);
+      P16 = this.add.text(325, 35, "Player", pawnCardStyle);
+      P17 = this.add.text(325, 75, "Player", pawnCardStyle);
+      P18 = this.add.text(325, 115, "Player", pawnCardStyle);
+      P19 = this.add.text(325, 155, "Player", pawnCardStyle);
+      P20 = this.add.text(325, 195, "Player", pawnCardStyle);
+      P21 = this.add.text(325, 235, "Player", pawnCardStyle);
+      P22 = this.add.text(325, 275, "Player", pawnCardStyle);
+      P23 = this.add.text(325, 315, "Player", pawnCardStyle);
+      P24 = this.add.text(325, 355, "Player", pawnCardStyle);
 
       //MALCODE ENDS
 
