make fullscreen work properly

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
                 debug: true
             }
         },
-        scene: [IntroScene, RaidScene]
+        scene: [IntroScene, RaidScene],
+        scale: {
+          mode: Phaser.Scale.FIT,
+          autoCenter: Phaser.Scale.CENTER_BOTH,
+        },
     };
 
     var game = new Phaser.Game(config);
