--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             default: 'arcade',
             arcade: {
                 gravity: { y: 0 },
-                debug: true
+                //debug: true
             }
         },
         scene: [IntroScene, RaidScene],
